--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -96,7 +96,7 @@
                             <td rowspan="{{ rowspan }}">
                                 <div class="info-grid">
                                     <div>Course Name</div><div><strong>: {{ att.report.exam.course.courseName }}</strong></div>
-                                    <div>Course Code/Section</div><div><strong>: {{ att.report.exam.course.courseCodeSection }}</strong></div>
+                                    <div>Course Code/Section</div><div><strong>: {{ att.report.exam.course.courseCodeSectionIntake }}</strong></div>
                                     <div>Number of Students</div><div><strong>: {{ att.report.exam.course.courseStudent }}</strong></div>
                                     <div>Exam Date</div><div><strong>: {{ att.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ att.report.exam.examEndTime.strftime("%d/%b/%Y") }}</strong></div>
                                     <div>Exam Day</div><div><strong>: {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }}</strong></div>
