--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -95,7 +95,7 @@
                             <td rowspan="{{ rowspan }}">
                                 <div class="info-grid">
                                     <div>Course Name</div><div><strong>: {{ att.report.exam.course.courseName }}</strong></div>
-                                    <div>Course Code/Section</div><div><strong>: {{ att.report.exam.course.courseCodeSection }}</strong></div>
+                                    <div>Course Code/Section</div><div><strong>: {{ att.report.exam.course.courseCodeSectionIntake }}</strong></div>
                                     <div>Number of Students</div><div><strong>: {{ att.report.exam.course.courseStudent }}</strong></div>
                                 </div>
                             </td>
