--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -44,6 +44,10 @@
     <div id="uploadSection" class="function-frame" style="width:80%">
         <div class="form-left" style="width: 100%">
             <h4 style="text-align: center;">File Upload Section</h4>
+            <h5 style="text-align: center;">Download Exam Templates</h5>
+            <div style="text-align: center; margin-bottom: 20px;">
+                <a href="{{ url_for('download_exam_template') }}" style="margin: 0 10px;"></a>
+            </div>
             <label for="exam_list">
                 <div class="upload-container" id="examUploadContainer">
                     <div class="upload-text">
