--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -46,7 +46,7 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <h5 style="text-align: center;">Download Exam Templates</h5>
             <div style="text-align: center; margin-bottom: 20px;">
-                <a href="{{ url_for('download_exam_template') }}" style="margin: 0 10px;"></a>
+                <a href="{{ url_for('download_exam_template') }}"></a>
             </div>
             <label for="exam_list">
                 <div class="upload-container" id="examUploadContainer">
