--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -107,19 +107,21 @@
 
                 <!-- Flash Message Section -->
                 {% set flashes = get_flashed_messages(with_categories=true) %}
-                <div class="messages-container">
-                    {% if uploadResult %}
-                        <div class="result-message">{{ uploadResult }}</div>
-                    {% elif uploadErrors %}
-                        <div class="error-message">{{ uploadErrors }}</div>
-                    {% elif flashes %}
-                        {% for category, message in flashes %}
-                            <div class="alert alert-{{ category }}">
-                                <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                </div>
+                {% if uploadResult or uploadErrors or flashes %}
+                    <div class="messages-container">
+                        {% if uploadResult %}
+                            <div class="result-message">{{ uploadResult }}</div>
+                        {% elif uploadErrors %}
+                            <div class="error-message">{{ uploadErrors }}</div>
+                        {% elif flashes %}
+                            {% for category, message in flashes %}
+                                <div class="alert alert-{{ category }}">
+                                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                {% endif %}
                 <br>
 
                 <!-- Tab Content Sections -->
