--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -35,7 +35,8 @@
                 <select name="role" id="roleSelect" onchange="updateDepartmentLabel()" value="{{ role_text }}" required>
                     <option value="" disabled selected>Select Role</option>
                     <option value="LECTURER">LECTURER</option>
-                    <option value="DEAN">DEAN/(HOS) HEAD OF SCHOOL</option>
+                    <option value="DEAN">DEAN</option>
+                    <option value="HOS">(HOS) HEAD OF SCHOOL</option>
                     <option value="HOP">(HOP) HEAD OF PROGRAMME</option>
                     <option value="ADMIN">ADMIN</option>
                 </select><br>
