--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -184,10 +184,7 @@
             datasets: [{
                 label: "Venues by Floor",
                 data: floorData,
-                backgroundColor: [
-                    '#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0',
-                    '#9966FF', '#FF9F40'
-                ]
+                backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF', '#FF9F40', '#C7C7C7', '#5366FF', '#FF66FF', '#66FFB2', '#FFB266', '#66B2FF']
             }]
         },
         options: {
