--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -15,7 +15,7 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
+            <div class="dashboard-row">
                 <div class="dashboard-frame">
                     <h3>Total Departments</h3>
                     <p class="dashboard-text">{{ total_department }}</p>
@@ -23,6 +23,10 @@
                 <div class="dashboard-frame">
                     <h3>Total HOP</h3>
                     <p class="dashboard-text" style="color:green;">{{ hops|length }}</p>
+                </div>
+                <div class="dashboard-frame">
+                    <h3>Total HOS</h3>
+                    <p class="dashboard-text" style="color:#47AEF5;">{{ hoss|length }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Dean/HOS</h3>
@@ -45,13 +49,11 @@
                 <label>Department Code</label>
                 <input type="text" name="departmentCode" required>
             </div>
-
             <div class="form-right">
                 <label>Department Name</label>
                 <input type="text" name="departmentName" required>
             </div>
         </div>
-
         <input type="hidden" name="form_type" value="manual">
         <br><br>
 
