--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -358,7 +358,7 @@ document.addEventListener("DOMContentLoaded", () => {
             labels: {{ (courses_by_department | map(attribute='department') | list) | tojson | safe }},
             datasets: [{
                 data: {{ (courses_by_department | map(attribute='count') | list) | tojson | safe }},
-                backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF', '#FF9F40', '#C7C7C7', '#5366FF', '#FF66FF', '#66FFB2', '#FFB266', '#66B2FF'];
+                backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF', '#FF9F40', '#C7C7C7', '#5366FF', '#FF66FF', '#66FFB2', '#FFB266', '#66B2FF'],
                 borderWidth: 1
             }]
         },
