--- a/app/templates/access/accessBase.html
+++ b/app/templates/access/accessBase.html
@@ -24,7 +24,7 @@
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
-                <a href="{{ url_for('access_timetable') }}" class="tab-link {% if active_tab == 'access_timetabletab' %}active{% endif %}">
+                <a href="{{ url_for('access_ownTimetable') }}" class="tab-link {% if active_tab == 'access_ownTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
                     <span>Own Timetable</span>
                 </a>
