--- a/app/templates/access/accessHomepage.html
+++ b/app/templates/access/accessHomepage.html
@@ -6,7 +6,7 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
-            <a href="{{ url_for('access_timetable')}}" style="text-decoration: none;"><h2>Timetable</h2></a>
+            <a href="{{ url_for('access_ownTimetable')}}" style="text-decoration: none;"><h2>Timetable</h2></a>
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>    
