--- a/app/templates/access/accessProfile.html
+++ b/app/templates/access/accessProfile.html
@@ -1,4 +1,4 @@
-{% extends "access/Base.html" %}
+{% extends "access/accessBase.html" %}
 {% block title %}Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
