--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -52,21 +52,18 @@
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
                     <h4>Download Course Templates by Department</h4>
-
                     <div>
                         {% for dept in department_data %}
-                            <a href="{{ url_for('download_course_template', department_code=dept.departmentCode) }}" style="margin: 0 10px;">
-                                {{ dept.departmentCode }}
-                            </a>
+                            <a href="{{ url_for('download_course_template', department_code=dept.departmentCode) }}" style="margin: 0 10px;">{{ dept.departmentCode }}</a>
                         {% endfor %}
                     </div><br><br>
                     <div class="upload-text">
-                        Please upload a file with the <b>first row left empty</b>.Data should begin from columns <b>A to H</b>, with headers as follows:  <br><br>
+                        Please upload a file with the <b>first row left empty</b>.
+                        Data should begin from columns <b>A to H</b>, with headers as follows:<br><br>
                         <i>['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer', 'No. of Students']</i><br><br>
                         You may also download an Excel template for your department using the links above.<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
                     </div>
-                    <div class="file-types"></div><br>
                     <div id="courseSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
