--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -53,11 +53,10 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="timetable_list">
                 <div class="upload-container" style="width: 80%;" id="timetableUploadContainer">
-                    <div class="upload-text">
-                        Upload in PDF file format<br><br><br>
-                        Click to upload or drag and drop with below file format
+                 <div class="upload-text">
+                        Please upload the timetable file in <b>PDF format only</b>.<br><br>
+                        You may click below to upload, or drag and drop your file here.
                     </div>
-                    <div class="file-types">PDF ONLY</div><br>
                     <div id="timetableSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
