--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -56,7 +56,7 @@
                  <div class="upload-text">
                         Please upload the timetable file in <b>PDF format only</b>.<br><br>
                         You may click below to upload, or drag and drop your file here.
-                    </div>
+                    </div><br>
                     <div id="timetableSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
