--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -46,17 +46,16 @@
             <h4 style="text-align: center;">File Upload Section</h4>
             <label for="exam_list">
                 <div class="upload-container" id="examUploadContainer">
-                    <h4>Download Exam Templates</h4>
-                    <div>
-                        <a href="{{ url_for('download_exam_template') }}">Download the Exam Template</a>
-                    </div><br><br>
+                    <h4 style="text-align: center;">
+                        Download the exam template <a href="{{ url_for('download_exam_template') }}"> here</a>.
+                    </h4><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.  
                         Data should begin from columns <b>A to I</b>, with headers as follows:<br><br>
                         <i>['Date', 'Day', 'Start', 'End', 'Program', 'Course/Section', 'Lecturer', 'No. of Students', 'Room']</i><br><br>
                         You may also download the exam template using the link above.<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
-                    </div><br>
+                    </div><br><br>
                     <div id="examSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
