--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -63,7 +63,7 @@
                         <i>['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer', 'No. of Students']</i><br><br>
                         You may also download an Excel template for your department using the links above.<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
-                    </div><br><br>
+                    </div><br>
                     <div id="courseSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
