--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -47,7 +47,7 @@
             <label for="exam_list">
                 <div class="upload-container" id="examUploadContainer">
                     <h4 style="text-align: center;">
-                        Download the exam template <a href="{{ url_for('download_exam_template') }}"> here</a>.
+                        Download the exam template <a href="{{ url_for('download_exam_template') }}"><i>HERE</i></a>
                     </h4><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.  
@@ -55,7 +55,7 @@
                         <i>['Date', 'Day', 'Start', 'End', 'Program', 'Course/Section', 'Lecturer', 'No. of Students', 'Room']</i><br><br>
                         You may also download the exam template using the link above.<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
-                    </div><br><br>
+                    </div><br>
                     <div id="examSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
