--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -47,7 +47,7 @@
             <label for="staff_list">
                 <div class="upload-container" id="staffUploadContainer">
                     <h4 style="text-align: center;">
-                        Download the staff template <a href="{{ url_for('download_user_template') }}"> here</a>.
+                        Download the staff template <a href="{{ url_for('download_user_template') }}"><i>HERE</i></a>
                     </h4><br>
                     <div class="upload-text">
                         Please upload a file with the <b>first row left empty</b>.  
@@ -57,7 +57,7 @@
                         • <b>Email</b> must end with <b>@newinti.edu.my</b><br>
                         • <b>Contact</b> must start with <b>01</b> and contain 10–11 digits<br><br>
                         Click below to upload, or drag and drop a file (accepted formats: <b>XLSX, XLS, XLSM</b>).
-                    </div><br><br>
+                    </div><br>
                     <div id="staffSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
