--- a/app/templates/access/accessBase.html
+++ b/app/templates/access/accessBase.html
@@ -13,7 +13,12 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | {{ user_level }} of {{ user_department }}
+            {{ user_name }} | {{ user_id }} | 
+            {% if user_level == 2 %} DEAN
+            {% elif user_level == 3 %} HOS
+            {% elif user_level == 4 %} HOP
+            {% else %} Unknown
+            {% endif %} of {{ user_department }}
         </div>
     </header>
 
