--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -88,7 +88,7 @@
                        value="{{ department_select.departmentName if department_select else '' }}" required>
             </div>
 
-            <div class="form-right">
+            <div class="form-middle">
                 <label>Dean Name</label>
                 <select id="deanName" name="deanName">
                     <option value="" disabled selected>Select a Dean</option>
@@ -107,8 +107,9 @@
                             [{{ hos.userDepartment }}] {{ hos.userName }}
                         </option>
                     {% endfor %}
-                </select><br>
-
+                </select>
+            </div> 
+            <div class="form-right">
                 <label>Hop Name</label>
                 <select id="hopName" name="hopName">
                     <option value="" disabled selected>Select a Hop</option>
