--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -14,8 +14,8 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row" style=" grid-template-columns: repeat(5, 1fr);">
-                <div class="dashboard-frame">
+            <div class="dashboard-row">
+                <div class="dashboard-frame pie">
                     <h3>Total Exams</h3>
                     <p class="dashboard-text">{{ exam_data|length }}</p>
                 </div>
